[metadata]
name = model2c
version = 0.0.1
author = Ekansh Agrawal
author_email = agrawalekansh@berkely.edu
description = ML model to low-level inference convertor
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = package issues url
keywords = arduino, python, ml, convertory, torch, keras, raspberrypi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = 
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
