[metadata]
name = model2c
version = 1.1.1
author = Ekansh Agrawal
author_email = agrawalekansh@berkely.edu
description = ML model to low-level inference convertor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/h3x4g0ns/model2c/tree/main
keywords = arduino, python, ml, convertory, torch, keras, raspberrypi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
